--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vapor-ui/core": "1.0.0-beta.3",
     "@vapor-ui/icons": "1.0.0-beta.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ts-morph": "^27.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
